scripts and org: general adjustments

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ testing/for_benchmark
 nulloretriever.egg-info
 __pycache__/
 testing/module-testing/data/*
-.snakemake
+*.snakemake
+*.tsv
+workflow/data/genomes/*
