--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -15,7 +15,7 @@ rule all:
 
 rule create_base_directories:
     output:
-        ".directories_created"
+        expand("{dirs}/.directories_created", dirs=paths)
     params:
         dirs = paths
     shell:
@@ -25,7 +25,7 @@ rule create_base_directories:
         """
 rule create_results_directories:
     input:
-        ".directories_created"
+        expand("{dirs}/.directories_created", dirs=paths)
     output:
         expand("results/k{k}/{organism}/.results_directories_created", k=ks, organism=organisms)
     params:
